i changed each update and delete function

--- a/management/templates/management/add_result.html
+++ b/management/templates/management/add_result.html
@@ -5,7 +5,7 @@
 
 {%load crispy_forms_tags %}
 {% block content %}
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-4">
 				{% include 'management/sidebar.html'%}
