--- a/management/templates/management/attendance_record.html
+++ b/management/templates/management/attendance_record.html
@@ -16,7 +16,7 @@
 				<div class="card bg-info">
 					<div class="card-body" style="color: white;">
 						<table class="table">
-							<h5 class="text-center">Student Attendance Record</h5>
+							<h5 class="text-center">Student Attendance Record</h5><hr>
 							<h5>Teacher Name:{{request.user.first_name}}</h5>
 							<h5>Subject: {{request.user.teachersubjectregistration.subject}}</h5>
 
