--- a/management/templates/management/update_user_detail.html
+++ b/management/templates/management/update_user_detail.html
@@ -13,7 +13,7 @@
 				<div class="card bg-info">
 					<div class="card-body" style="color: white">
 						<form action="" class="" method="post"  enctype="multipart/form-data">
-								<h1 style="text-align: center">Update Detail</h1><hr>
+								<h5 style="text-align: center">Update User Detail</h5><hr>
 								{% csrf_token %}
 								{{form|crispy}}
 
