--- a/management/templates/management/login.html
+++ b/management/templates/management/login.html
@@ -4,10 +4,10 @@
 {%load crispy_forms_tags %}
 {% block content %}
 
-	<div class="container-fluid" style="">
+	<div class="container" style="">
 		
 		
-			<br><br>
+			
 				<div class="" style="margin: 10px;">
 					<div class="card bg-dark">
 						<div class="card-body" style="color: white;">
