--- a/management/templates/management/update_course_registration.html
+++ b/management/templates/management/update_course_registration.html
@@ -3,6 +3,11 @@
 {% block title %} update course registeration {% endblock %}
 {% load static %}
 {%load crispy_forms_tags %}
+<style>
+	#id_subject{
+		list-style:  none;
+	}
+</style>
 {% block content %}
 
 	<div class="container-fluid" style="">
@@ -20,7 +25,9 @@
 								<form action="" method="post" class="" style="width: 400px;">
 									<h5 style="text-align: center">Update Course Registration</h5><hr>
 									{% csrf_token %}
-									{{form|crispy}}
+									<div class="main">
+									{{form.as_p}}
+									</div>
 									<div class="form-group text-center">
 										<input type="submit" name="update" class="btn btn-primary text-center" value="update" >
 									</div>
