--- a/management/templates/management/view_result.html
+++ b/management/templates/management/view_result.html
@@ -21,7 +21,7 @@
 							</div>
 							<div class="col-md-8">
 								<h5>Result Information:</h5><hr>
-			
+								{% if results %}
 								<table class="table">
 			
 									<thead>
@@ -35,6 +35,7 @@
 										</tr>
 									</thead> 
 									<tbody>
+										
 										{% for result in results %}
 										<tr>
 											
@@ -44,8 +45,12 @@
 											<td>{{result.teacher}}</td>
 										</tr>
 											{% endfor %}
+										
 									</tbody>
 								</table>
+								{% else %}
+								<h5><b>Result does not declare !</b></h5>
+								{% endif %}	
 								
 								
 							</div>
