--- a/management/templates/management/change_password.html
+++ b/management/templates/management/change_password.html
@@ -6,21 +6,14 @@
 
 	<div class="container" style="">
 		<div class="" style="margin: 10px;">
-			<div class="card bg-dark">
+			<div class="card bg-dark col-md-6">
 				<div class="card-body" style="color: white;">
-					<div class="row">
-						<div class="col-md-6 text-center">
-							<br>
-							<h5>you new user ? first for create an account click on create account . </h5><hr>
-							<img src="{% static 'images/login.jpg' %}" alt="register" width="300" height="180" style="margin-top: -30px;"><br><br>
-							<a href="/management/signup"><button class="btn btn-info" style="border-radius: 25px;">create an account </button></a>
-									
-						</div>
+					
 
 						<div class="col-md-6">
 							<br>
 							<form action="" method="post" class="" style="width: 400px;">
-								<h5 style="text-align: center">Login</h5><hr>
+								<h5 style="text-align: center">Change Password</h5><hr>
 								{% csrf_token %}
 								{% for field in form %}
 								<div class="field">
@@ -37,15 +30,13 @@
 								
 								
 								<div class="form-group text-center">
-									<input type="submit" name="Login" class="btn btn-primary text-center" value="login" >
+									<input type="submit" name="submit" class="btn btn-primary text-center" value="submit" >
 								</div>
 
 							</form>
 					
 									
 						</div>
-							
-					</div>
 				</div>
 			</div>
 				
