--- a/management/templates/management/index.html
+++ b/management/templates/management/index.html
@@ -23,21 +23,21 @@
   			</ul>
   			<div class="carousel-inner">
     		<div class="carousel-item active">
-      			<img src="{% static 'images/img1.jpg' %}" alt="Los Angeles" width="650" height="500">
+      			<img src="{% static 'images/image1.jpg' %}" alt="Los Angeles" width="650" height="500">
       			<div class="carousel-caption">
         			<h3>Los Angeles</h3>
         			<p>We had such a great time in LA!</p>
       			</div>   
     		</div>
     		<div class="carousel-item">
-      			<img src="{% static 'images/img2.jpg' %}" alt="Chicago" width="650" height="500">
+      			<img src="{% static 'images/image2.jpg' %}" alt="Chicago" width="650" height="500">
       			<div class="carousel-caption">
         			<h3>Chicago</h3>
         			<p>Thank you, Chicago!</p>
      			 </div>   
     			</div>
     		<div class="carousel-item">
-      			<img src="{% static 'images/img3.jpg' %}" alt="New York" width="650" height="500">
+      			<img src="{% static 'images/image3.jpg' %}" alt="New York" width="650" height="500">
       			<div class="carousel-caption">
        				 <h3>New York</h3>
        				 <p>We love the Big Apple!</p>
@@ -57,7 +57,8 @@
 		<div class="col-md-6">
 			<div class="card bg-info">
 				<div class="card-body text-center" style="color: white;">
-					<h5>Courses Information:</h5><hr>
+					<h5>Courses Information:</h5>
+					<h5><b style="color: black">Total course : {{total}}</b></h5><hr>
 					<table class="table">
 						<thead>
 							<tr>
