--- a/management/templates/management/take_attendance.html
+++ b/management/templates/management/take_attendance.html
@@ -3,6 +3,7 @@
 {% block title %} take attendance{% endblock %}
 {%load crispy_forms_tags %}
 {% load static %}
+
 {% block content %}
 
 	<div class="container-fluid" style="">
@@ -15,9 +16,11 @@
 				<div class="card bg-info">
 					<div class="card-body" style="color: white;">
 						<div class="row">
-							<div class="col-md-4">
+							<div class="col-md-4 ">
 								<form action="" method="post" class="">
-									<h5 style="text-align: center">Take Attendance</h5><hr>
+									<h5 style="text-align: center">Take Attendance</h5>
+
+									<hr>
 									{% csrf_token %}
 							
 									{{form.as_p}}
@@ -29,12 +32,13 @@
 									</div>
 								</form>
 							</div>
-							<div class="col-md-8">
+							<div class="col-md-8 text-center">
 								{% if attendance %}
 								<table class="table">
 									<thead>
 										<h5>Attendance Information:</h5>
-										<h5>Date : {{today}} ,  Subject: {{request.user.teachersubjectregistration.subject}}</h5>
+										<h5 style="color:black"><b>Course: {{request.user.teachersubjectregistration.course}} , Subject: {{request.user.teachersubjectregistration.subject}}</b></h5><hr>
+										<h5 style="color:black"><b>Date : {{today}}</b></h5>
 										
 
 										<tr>
@@ -49,7 +53,7 @@
 											<tr>
 											
 												<td><b>{{attendance.student}}</b></td>
-												<td>{{attendance.status}}</td>
+												<td><b>{{attendance.status}}</b></td>
 												<td>
 													<a href="/management/update-attendance/{{attendance.id}}"><button class="btn btn-warning">Update</button></a>
 													<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal">Delete</button>
@@ -79,8 +83,8 @@
 									
 								</table>
 								{% else %}
-								<div class="text-center">
-									<img src="{% static 'images/attendance.jpg'%}" style="height: 300px; width: 500px;">
+								<div class="">
+									<img src="{% static 'images/attendance.jpg'%}" style="height: 300px; width: 450px;">
 									
 								</div>
 								
