--- a/management/templates/management/teacher_subject_detail.html
+++ b/management/templates/management/teacher_subject_detail.html
@@ -16,9 +16,11 @@
 					<div class="card-body " style="color: white;">
 						<div class="main">
 						<h5 class="text-center">Subject Information</h5><hr>	
-						<h5>Course : {{subject_detail.subject.course}}</h5>						
+						<h5>Course : {{subject_detail.course}}</h5>	
+						<h5>Course Description : {{subject_detail.course.description}}</h5>						
 						<h5>Subject : {{subject_detail.subject}}</h5>
 						<h5>Description : {{subject_detail.subject.description}}</h5><br>
+						<h5 style="color:black;background: white;width: 200px;"><b>Total Student : {{total_student}}</b></h5>
 						<a href="/management/update-subject-registration"><button class="btn btn-warning">Update</button></a>
 						<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal">Delete</button>
 					</div>
